--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,14 @@
         android:textSize="8pt"
         android:id="@+id/myBtn"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="绑定标签按钮"
+        android:textSize="8pt"
+        android:id="@+id/btn"
+        android:onClick="btn_Click"
+        android:layout_below="@+id/myBtn"
+        android:layout_alignParentStart="true"/>
+
 </RelativeLayout>
